# Backend

./: Best Model Necessity of Transplantation.joblib  Millor Model Diagnòstic Binary.joblib  bd.joblib  de.joblib  input_ia.py  main.py  nr.joblib  pyproject.toml
appointment/: model.py  router.py  schema.py  service.py
base/: StrEnum.py  base_model.py  base_service.py  base_token.py  ia.py  jwt_bearer.py  settings.py
best_models/: best_model_Binary diagnosis.joblib  best_model_Death.joblib  best_model_Necessity of transplantation.joblib
hospital/: model.py  router.py  schema.py  service.py
prediction/: model.py
user/: model.py  router.py  schema.py  service.py
user_doctor/: model.py  schema.py
user_patient/: model.py  schema.py
