[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ton Llucia"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "2.0.31"
fastapi-sqlalchemy = "^0.2.1"
pydantic-settings = "^2.7.0"
uvicorn = "^0.32.1"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
